# what-about-the-weather-app

./: README.md  pyproject.toml
app/: exeptions.py  main.py  routers.py  services.py
app/templates/: index.html
