[tool.poetry]
name = "what-about-the-weather-app"
version = "0.1.0"
description = ""
authors = ["Valeriya <Dzhavadova.v@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
requests = "^2.32.3"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
